# web-recon-kit

./: .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  report.py  scope.example.toml
.github/: dependabot.yml
.github/workflows/: actionlint.yml  bump-my-version.yaml  ci.yml  codeql.yml  lint-md-links.yml  publish-release.yaml  tag-release.yaml
changelog.d/: 20260720_153552_93844790+qte77_pin_browser_extra.md  20260720_154150_93844790+qte77_coverage_gate.md  20260720_171443_93844790+qte77_agents_and_references.md  20260720_202734_93844790+qte77_schemathesis_switches.md  20260720_213727_93844790+qte77_zizmor_workflow_scan.md  20260720_214020_93844790+qte77_security_policy.md  20260720_220729_93844790+qte77_dev_tooling_dependency_group.md
docs/: architecture.md  glossary.md  polyfetch-integration.md  roadmap.md  userstory.md
inventory/: build_inventory.py
lib/: client.py  types.py
runners/: r1_recon.py  r2_authmatrix.py  r2_cron_auth.py  r2_schemathesis.sh  r3_bola.py  r3_rbac_bfla.py
tests/: test_client.py
workflow/: verify_findings.workflow.js
