[project]
name = "web-recon-kit"
version = "0.1.0"
description = "Reusable, target-agnostic web/API security-assessment harness. httpx for the API tier; an optional polyfetch-scrape browser tier (uv sync --extra browser); configured per target via scope.toml."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
# Later stages plug in here: `uv sync --extra dev` then `make lint typecheck audit`.
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pip-audit>=2.7",   # SCA: dependency vulnerability scan
    "scriv[toml]>=1.8",  # CHANGELOG fragments (release flow)
]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]
# Browser tier (inventory mining, gate classification, screenshots). Pulls polyfetch and its
# heavy deps (patchright, curl_cffi) — kept OPTIONAL so the API tier stays httpx-only.
# After `uv sync --extra browser`, run `uv run patchright install chromium` once.
browser = [
    # Pinned to a release tag so browser-tier installs are reproducible; an unpinned git
    # dep silently tracks polyfetch's default branch. uv.lock records the exact commit.
    # Bump this tag deliberately when adopting a new polyfetch release.
    "polyfetch-scrape @ git+https://github.com/qte77/polyfetch-scrape.git@v0.7.0",
]

[tool.uv]
# Scripts + runners, not an installable library — manage the venv, don't build.
package = false

# --- Lint ---------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN", "S", "RUF", "PTH"]
ignore = ["ANN401"]  # allow explicit Any where a browser bridge returns it

[tool.ruff.lint.per-file-ignores]
"runners/r2_schemathesis.sh" = ["ALL"]
"tests/*" = ["S101", "S105", "S106", "ANN"]

# --- Types (strict) -----------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
files = ["lib", "runners", "inventory", "report.py"]

[[tool.mypy.overrides]]
# polyfetch / patchright ship only in the optional `browser` extra, which CI/mypy don't install.
module = ["polyfetch_scrape.*", "patchright.*"]
ignore_missing_imports = true

# --- Tests --------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

# --- Changelog (scriv) --------------------------------------------------
# `make changelog_new` drops a fragment in changelog.d/; at release the bump
# workflow (or `make changelog_release VERSION=X.Y.Z`) collects them into
# CHANGELOG.md at the `<!-- scriv-insert-here -->` marker.
[tool.scriv]
format = "md"
fragment_directory = "changelog.d"
categories = ["Added", "Changed", "Deprecated", "Removed", "Fixed", "Security"]
md_header_level = "2"
entry_title_template = "[{{ version }}] - {{ date.strftime('%Y-%m-%d') }}"
md_html_anchors = false

# --- Version bumping (release flow) -------------------------------------
# `gh workflow run bump-my-version.yaml -f bump_type=…` rewrites the files below
# and syncs uv.lock + collects scriv fragments via the qte77/.github reusable,
# which commits (signed, GitHub API) and opens a `chore(release)` PR; tag-release
# tags the merge commit. So bump-my-version must NOT commit or tag itself.
[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = false
tag = false
allow_dirty = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "v{new_version}"
message = "chore(release): bump {current_version} -> {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "README.md"
search = "version-{current_version}-blue"
replace = "version-{new_version}-blue"
